--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
   <link rel="stylesheet" href="./calculator-styling.css" />
 </head>
 <body>
- 
+  <div class="calc-box">
+    <div class="calc-screen">0</div>
+    <div class="calculator-buttons calc-grid">
+      <button class="btn clear">C</button>
+      <button class="btn back">←</button>
+      <button class="btn btn-orange divide">÷</button>
+      <button class="btn seven">7</button>
+      <button class="btn eight">8</button>
+      <button class="btn nine">9</button>
+      <button class="btn btn-orange multiply">×</button>
+      <button class="btn four">4</button>
+      <button class="btn five">5</button>
+      <button class="btn six">6</button>
+      <button class="btn btn-orange minus">−</button>
+      <button class="btn one">1</button>
+      <button class="btn two">2</button>
+      <button class="btn three">3</button>
+      <button class="btn btn-orange add">+</button>
+      <button class="btn zero">0</button>
+      <button class="btn btn-orange equal">=</button>
+     </div>
+  </div> 
 </body>
 </html>
