added event listener for each number btn

--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
       <button class="btn clear">C</button>
       <button class="btn back">←</button>
       <button class="btn btn-orange divide">÷</button>
-      <button class="btn seven">7</button>
-      <button class="btn eight">8</button>
-      <button class="btn nine">9</button>
+      <button class="btn btn-number seven">7</button>
+      <button class="btn btn-number eight">8</button>
+      <button class="btn btn-number nine">9</button>
       <button class="btn btn-orange multiply">×</button>
-      <button class="btn four">4</button>
-      <button class="btn five">5</button>
-      <button class="btn six">6</button>
+      <button class="btn btn-number four">4</button>
+      <button class="btn btn-number five">5</button>
+      <button class="btn btn-number six">6</button>
       <button class="btn btn-orange minus">−</button>
-      <button class="btn one">1</button>
-      <button class="btn two">2</button>
-      <button class="btn three">3</button>
+      <button class="btn btn-number one">1</button>
+      <button class="btn btn-number two">2</button>
+      <button class="btn btn-number three">3</button>
       <button class="btn btn-orange add">+</button>
-      <button class="btn zero">0</button>
+      <button class="btn btn-number zero">0</button>
       <button class="btn btn-orange equal">=</button>
      </div>
   </div> 
+  <script src="./calculator.js"></script>
 </body>
 </html>
