--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <div class="calculator-buttons calc-grid">
       <button class="btn clear">C</button>
       <button class="btn back">←</button>
-      <button class="btn btn-orange divide">÷</button>
+      <button class="btn btn-operation divide">÷</button>
       <button class="btn btn-number seven">7</button>
       <button class="btn btn-number eight">8</button>
       <button class="btn btn-number nine">9</button>
-      <button class="btn btn-orange multiply">×</button>
+      <button class="btn btn-operation multiply">×</button>
       <button class="btn btn-number four">4</button>
       <button class="btn btn-number five">5</button>
       <button class="btn btn-number six">6</button>
-      <button class="btn btn-orange minus">−</button>
+      <button class="btn btn-operation minus">−</button>
       <button class="btn btn-number one">1</button>
       <button class="btn btn-number two">2</button>
       <button class="btn btn-number three">3</button>
-      <button class="btn btn-orange add">+</button>
+      <button class="btn btn-operation add">+</button>
       <button class="btn btn-number zero">0</button>
-      <button class="btn btn-orange equal">=</button>
+      <button class="btn btn-operation equal">=</button>
      </div>
   </div> 
   <script src="./calculator.js"></script>
