added clear and back functionality

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div class="calc-box">
     <div class="calc-screen">0</div>
     <div class="calculator-buttons calc-grid">
-      <button class="btn clear">C</button>
-      <button class="btn back">←</button>
+      <button class="btn btn-operation btn-operation-gray clear">C</button>
+      <button class="btn btn-operation btn-operation-gray  back">←</button>
       <button class="btn btn-operation divide">÷</button>
       <button class="btn btn-number seven">7</button>
       <button class="btn btn-number eight">8</button>
